--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,8 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+TWITTER_ID=
+TWITTER_SECRET=
